External/Releases/A/6-100/V2024.04.02/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 12, 2024, Tuesday, April 2nd)

**Tag:** `V2024.04.02`

**Released on:** `2024, Tuesday, April 2nd at 4:16 pm PST`

***Pre-release***

This is the 12th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the ninth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 11, archived data for discussion 82, archived files related to the 12th remodel
- README: Updated README to version 86
- New media: Flags (official and placeholder) for `Netherlands` `Leader` `Ireland` `Finland` `United States` `Union` `Republic`
- Other: No other changes

***
