External/Releases/A/6-100/V2024.04.04/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 14, 2024, Thursday, April 4th)

**Tag:** `V2024.04.04`

**Released on:** `2024, Thursday, April 4th at 04:20 pm PST`

***Pre-release***

This is the 14th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the eleventh beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

This is the first update in which the README file refuses to generate (I haven't even hit the 512 KiB limit yet, but I have surpassed 500 KB (488 KiB)) it glitches out the main repository a bit (sometimes the release section won't load, sometimes both the release section and languages section won't load, every time, the README won't load) I will have to temporarily remove some entries in tomorrows entry.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 13, archived data for discussion 84, archived files related to the 14th remodel
- README: Updated README to version 88
- New media: Logos (official and placeholder) for `<none>`
- Segments: Archived the `explore this repository` segment tree for README V87
- Other: No other changes

***
